--- a/styles/style.css
+++ b/styles/style.css
@@ -2,5 +2,8 @@ html {
   font-size: 10px;
   font-family: 'Open Sans', sans-serif;
   background-color: #000000;
-  text-align: center;
+}
+
+body {
+  width: 600px;
 }
