--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,11 @@ html {
   font-size: 10px;
   font-family: 'Open Sans', sans-serif;
   background-color: #000000;
+  color: #00539F;
 }
 
 body {
   width: 650px;
   margin: 0 auto;
-  padding: 0 20px 20px 20px;
+  padding: 0 24px 24px 24px;
 }
